npm install angular2

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,6 @@
 /db.sqlite3
+/Frontend/static/typings
+/Frontend/static/node_modules
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
